// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`types generate the core model types a basic model 1`] = `
"export type Account = ResultRecord & {
    avatar: StoredObject;
    email: string;
    isActive: boolean;
    lastActiveAt: Date;
    name: string;
    rewardPoints: number;
    settings: (JsonObject | JsonArray);
};
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types generate the core model types a model with a summary 1`] = `
"/**
 * A user account.
 */
export type Account = ResultRecord & {
    email: string;
    name: string;
};
/**
 * A user account.
 */
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types generate the core model types a model with an invalid field type 1`] = `
"export type Account = ResultRecord & {
    name: unknown;
};
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types generate the core model types a model with a link field 1`] = `
"export type Account = ResultRecord & {
    email: string;
    name: string;
};
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
export type Post<U extends Array<"author"> | "all" = [
]> = ResultRecord & {
    author: ResolveSchema<Account, U, "author">;
    title: string;
};
export type Posts<U extends Array<"author"> | "all" = [
]> = Array<Post<U>> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types generate the core model types a model with a many-to-many link field 1`] = `
"export type Account = ResultRecord & {
    email: string;
    name: string;
};
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
export type Space<U extends Array<"members"> | "all" = [
]> = ResultRecord & {
    members: ResolveSchema<Array<Account>, U, "members">;
    name: string;
};
export type Spaces<U extends Array<"members"> | "all" = [
]> = Array<Space<U>> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types generate the core model types a model with a link field that does not exist 1`] = `
"export type Account = ResultRecord & {
    email: string;
    latestPost: unknown;
    name: string;
};
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types generate the core model types a model with nested fields 1`] = `
"/**
 * A user account.
 */
export type Account = ResultRecord & {
    name: string;
    nested: {
        bar: number;
        foo: string;
    };
};
/**
 * A user account.
 */
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types syntax generate root query call signature a basic model 1`] = `
"<T = Account>(instructions?: Partial<CombinedInstructions>, options?: Record<string, unknown>): T;
"
`;

exports[`types syntax generate \`default\` syntax property a basic model 1`] = `
"including: ReducedFunction & (<T = Account>(value: CombinedInstructions["including"], options?: Record<string, unknown>) => T);
"
`;

exports[`types syntax generate \`orderedBy\` syntax property a basic model 1`] = `
"orderedBy: ReducedFunction & (<T = account>(instructions: {
    ascending?: Array<Expression | AccountFieldSlug>;
    descending?: Array<Expression | AccountFieldSlug>;
}, options?: Record<string, unknown>) => T) & {
    ascending: <T = account>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
    descending: <T = account>(fields: Array<Expression | AccountFieldSlug>, options?: Record<string, unknown>) => T;
};
"
`;

exports[`types syntax generate \`selecting\` syntax property a basic model 1`] = `
"selecting: ReducedFunction & (<T = account>(instructions: Array<AccountFieldSlug>, options?: Record<string, unknown>) => T);
"
`;

exports[`types syntax generate \`using\` syntax property a basic model 1`] = `
"using: ReducedFunction & {
    <U extends Array<"author"> | "all">(fields: U, options?: Record<string, unknown>): post<U> | null;
    <T = Post>(fields: Array<"author"> | "all", options?: Record<string, unknown>): T;
};
using: ReducedFunction & {
    <U extends Array<"author"> | "all">(fields: U, options?: Record<string, unknown>): Promise<post<U>>;
    <T = Post>(fields: Array<"author"> | "all", options?: Record<string, unknown>): Promise<T>;
};
"
`;

exports[`types syntax generate \`using\` syntax property a basic model with no link fields 1`] = `
"using: ReducedFunction & (<T = Account>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
using: ReducedFunction & (<T = Account>(value: CombinedInstructions["using"], options?: Record<string, unknown>) => T);
"
`;

exports[`types syntax generate \`with\` syntax property a basic model 1`] = `
"with: ReducedFunction & {
    <T = Account>(instructions: CombinedInstructions["with"], options?: Record<string, unknown>): T;
    id: <T = Account>(value: ResultRecord["id"], options?: Record<string, unknown>) => T;
    ronin: ReducedFunction & {
        createdAt: <T = Account>(value: ResultRecord["ronin"]["createdAt"], options?: Record<string, unknown>) => T;
        createdBy: <T = Account>(value: ResultRecord["ronin"]["createdBy"], options?: Record<string, unknown>) => T;
        updatedAt: <T = Account>(value: ResultRecord["ronin"]["updatedAt"], options?: Record<string, unknown>) => T;
        updatedBy: <T = Account>(value: ResultRecord["ronin"]["updatedBy"], options?: Record<string, unknown>) => T;
    };
    avatar: <T = Account>(avatar: Account["avatar"], options?: Record<string, unknown>) => T;
    email: <T = Account>(email: Account["email"], options?: Record<string, unknown>) => T;
    isActive: <T = Account>(isActive: Account["isActive"], options?: Record<string, unknown>) => T;
    lastActiveAt: <T = Account>(lastActiveAt: Account["lastActiveAt"], options?: Record<string, unknown>) => T;
    name: <T = Account>(name: Account["name"], options?: Record<string, unknown>) => T;
    rewardPoints: <T = Account>(rewardPoints: Account["rewardPoints"], options?: Record<string, unknown>) => T;
    settings: <T = Account>(settings: Account["settings"], options?: Record<string, unknown>) => T;
};
"
`;
